<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="12dp"
    android:paddingEnd="24dp"
    android:paddingBottom="4dp">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_action_mode_emergency" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_non_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contact_action_mode_non_emergency" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_message"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contact_message_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="3"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
